--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #424E61;
-    color: white;
+    background-color: #facd89;
+    color: rgb(248, 104, 9);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -26,16 +26,16 @@ body {
 
 .cabecalho-lista-item a{
     text-decoration: none; 
-    color: white;
+    color: rgb(133, 40, 40);
 }
 
-.escola-imagem{
+.escola-imagem{ 
     width: 25%;
 }
 
 #escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
-    color:white;
+    background-image: linear-gradient(#e4e3b3,#e9e0b7);
+    color:rgb(150, 29, 29);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,11 +56,11 @@ body {
 }
 
 
-.estudante-imagem{
+.fotocida1,<jpg>{
     width: 120px;
 }
 
-.estudante-icone{
+.estudante-icone{Saymon
     width: 24px;
     padding: 4px 8px;
 }
@@ -81,8 +81,14 @@ body {
 }
 
 .rodape{
-    background-color: black;
+    background-color: rgb(223, 120, 80);
     text-align: center;
+}
+
+.rodape-imagem{
+    height: 60px;
+    padding: 12px 0;
+   
 }
 
 .rodape-imagem{
